update final project for view

--- a/about.html
+++ b/about.html
@@ -4,13 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link href="css/about.css" rel="stylesheet">
 </head>
 <body>
+    
+    <nav>
     <ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="home.html">Home</a></li>
+        
     </ul>
+    </nav>  
+    <div class="clearfix">
+        <img src="images/Black with Book Shelf Icon Education Logo (2).png" alt="logo" width="20%" height="20%">
+        <img src="images/meattable.jpg" alt="me sitting at table" width="25%" height="25%">
+    </div>  
+     <div class="paragraph">
+    <h2>
+        LaDonna is a 3rd generation Venturan and attended schools in Ventura Unified School District. She has worked with junior high and high school students for over 25 years and she loves her job as a teacher.<br><br>
+        She has taught many different subjects: English, Earth Science, Biology and most recently AVID. Her goals are to be a life-long learner and a support for those who also want to learn. It was through her time as an AVID teacher that she discovered the best way to help someone who is struggling with their learning. That is to ask them questions! By helping her students understand where and why they are confused, the student can help themselves. She understands they many different questioning methods that will guide her students to their answers. SHE WILL NEVER JUST GIVE THEM THE SOLUTION. Together, LaDonna and her students work through the problem and develop the skills necessary to point to the confusion and then come up with a solution. Her work is very rewarding and she states that the best part of her job is watching her student have their "Ah Ha Moment." <br><br>
+        She lives in Ventura with her husband (who is also a high school teacher) and their daughter. Give her a call and she'd love to discuss how she can support your student and family. 805-231-7684
+    </h2> 
+    </div> 
 </body>
 </html>
