--- a/index.html
+++ b/index.html
@@ -5,24 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-    <ul>
-        <li><a href="about.html">About</a></li>
+    <nav>
+        <ul>
+          <img src="images/navbarbooks.png" alt="navbarbooks" width="60px" height="45px">
+        <li><a href="index.html">Home</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="home.html">Home</a></li>
-    </ul>
+        <li><a href="about.html">About</a></li>
+        <li>LaDonna's number: 805-231-7684</li>
+      </ul>
+    </nav>
 
-    <img src="images/learnalotlogo.png" alt="learnalotlogo" class="center">
-
-    <h1>Hi- My name is LaDonna Ramos</h1>
-    <div>
-        I love helping people become stronger, confident and successful students. Using my 25 years of public school teaching I am able to help people reach the goals the set for themselves. I look forward to talking to you.
+    <div class="clearfix">
+      <img src="images/Black with Book Shelf Icon Education Logo (2).png" alt="logo" width="25%" height="25%">
+      <img src="images/picofme.jpg" alt="picofme" width="25%" height="27%">
+      <div><h2>Hi I'm LaDonna Ramos.
+      I love helping people become STRONGER, CONFIDENT and SUCCESSFUL students. Using my 25 years of public school teaching I am able to help people reach the goals the set for themselves. I look forward to talking to you.<br>805-231-7684</h2><br>
+      
     </div>
-</body>
+    </div>
+    <!-- <div class="div2">
+      <h1>I love helping people become stronger, confident and successful students. Using my 25 years of public school teaching I am able to help people reach the goals the set for themselves. I look forward to talking to you.</h1>
+    </div> -->
+    
+  
+
+    <div class="column" style="background-color: none;">
+          <img src="images/studentsreading.jpg" alt="studentsreading" width="150px" height="100px">
+          <h2>Reading</h2>
+        <h3>I use Barton Reading and Spelling Sytem to help students become stronger readers and spellers. The curriculum is based on the Orton-Gillingham program. </h3>
+        </div>
+        <div class="column" style="background-color: none;">
+          <img src="images/studentdoingmath.jpg" alt="studentdoingmath" width="150px" height="100px">
+          <h2>Math</h2>
+          <h3> I believe in explicit direct instruction. I will help my students understand the process and structure of how math works. I will teach my students how to explain their points of confusion so later they can help their instructors realize what exactly need to help with.</h3>
+        </div>
+        <div class="column" style="background-color: none;">
+          <img src="images/tutorandstudent.jpg" alt="tutorandstudent" width="150px" height="100px">
+          <h2>Homework</h2>
+          <h3>I am able to help my students with any course, including high school Math 1, 2 and 3. I will never just give them the answer. Instead I will guide them with questions that will lead them to the answer they need.</h3>
+      </div>
+
+      <footer>
+        <p>Author: LaDonna Ramos</p>
+          <p>805-231-7684</p>
+        <a href="mailto:hege@example.com">ladonnar@gmail.com</a>
+      </footer>
+
+    <script src="https://kit.fontawesome.com/2ad6bd1453.js" crossorigin="anonymous"></script>
+   
+  </body>
 </html>
 
