--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link href="css/contact.css" rel="stylesheet">
+    <title>Contact</title>
+    <style>
+        .flex-container {
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+        }
+        
+        img {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+        }
+        </style>
 </head>
 <body>
-    <ul>
-        <li><a href="about.html">About</a></li>
+    <nav>
+        <ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="home.html">Home</a></li>
-    </ul>
+        <li><a href="about.html">About</a></li>
+        </ul>
+    </nav>
+<h2>Please fill out the following form, or send her an email at ladonnar@gmail.com, or give her a call at 805-231-7684</h2>
+<div class="flex-container action">
+    <form action="action_page.php" method="get" class="action">
+        <label for="fname">First name:</label>
+        <input type="text" id="fname" name="fname"><br><br>
+        <label for="lname">Last name:</label>
+        <input type="text" id="lname" name="lname"><br><br>
+        <label for="email">Your Email:</label>
+        <input type="text" id="email" name="email"><br><br>
+        <label for="phone number">Your Phone Number:</label>
+        <input type="text" id="phone number" name="phone number"><br><br>
+        <label for="message">Message:</label>
+        <input type="text" id="message" name="message"><br><br>
+        <input type="submit" value="Submit">
+      </form>
+   
+    <img src="images/phone.jpg" alt="phone" width="40%" height="40%">
+</div>
+    
 </body>
 </html>
